docroot/themes/custom/wateraid/components/card/card.scss
@import "../../sass/base";

.card {
  position: relative;
  height: 100%;
  width: fit-content;

  &.card--link:hover {
    cursor: pointer;
  }

  &.card--link:focus-within {
    outline: $wa-pink $wa-spacing-01 solid;
    border: $wa-navy $wa-spacing-01 solid;
  }

  &__image img {
    display: block;
    max-width: 100%;
    aspect-ratio: 5 / 3;
    object-fit: cover;
  }

  &__body {
    @include paragraph-sm();

    padding: $wa-spacing-04 0;
    display: flex;
    flex-direction: column;
    gap: $wa-spacing-02;
    color: $wa-navy;
  }

  &__heading {
    margin: 0;
    word-wrap: break-word;

    a {
      text-decoration: none;
      color: $wa-navy;

      &:focus-visible {
        outline: none;
      }
    }
  }

  &__date {
    font-family: $bold-font;
  }

  &__authors,
  &__date,
  &__read-time {
    display: flex;
    gap: $wa-spacing-02;
    align-items: center;

    svg {
      color: $wa-blue;
      width: $wa-spacing-06;
      height: $wa-spacing-06;
    }
  }

  &__tags span {
    margin-top: $wa-spacing-01;
  }

  &__external {
    margin: 0 0 0 auto;

    svg {
      color: $wa-blue;
    }
  }

  .image {
    margin-top: 0;
    @include desktop {
      margin-top: 0;
    }
  }

  // Card variants.
  &--teaser {
    border: $wa-spacing-01 $wa-white solid;
    height: 100%;
    max-width: 432px;

    &:hover {
      background-color: $wa-white;
      cursor: pointer;
      .card__heading {
        text-decoration: underline;
        text-decoration-color: $wa-navy;
      }
      .card__image img {
          transform: scale(1.05);
      }
    }

    .card__link:focus-visible {
      color: $wa-navy;
      background-color: $wa-pink;
      border-bottom: solid $wa-navy 3px;
      outline: none;
    }

    .card__image {
      overflow: hidden;
      img {
        transition: transform .5s
      }
    }
    .card__wrapper {
      background-color: $wa-white;
    }

    .card__heading {
      @include h6();
      padding-bottom: $wa-spacing-02;
    }

    .card__authors {
      svg {
        width: $wa-spacing-02;
        height: auto;
      }
    }
  }

  &--stats {
    justify-items: center;
    padding: $wa-spacing-06;
    height: 100%;

    &.card--link:hover::before {
      transform: translateX(-$wa-spacing-04) translateY(-$wa-spacing-02);
    }

    .card__image img,
    .card__image {
      width: calculate-rem(144);
      height: calculate-rem(144);
    }

    .card__body {
      align-items: center;
      text-align: center;
      gap: $wa-spacing-04;
    }

    .card__link {
      padding-top: $wa-spacing-02;
    }
  }

  &--signposting {
    .card__wrapper {
      background-color: $wa-white;
    }

    .card__heading {
      @include h5();
      overflow-wrap: normal;
      @include desktop() {
        @include h3();
      }
    }

    .card__heading {
      @include h5();
      overflow-wrap: normal;
      @include desktop() {
        @include h3();
      }
    }

    .card__body {
      padding: $wa-spacing-06;
    }

    &.card--large {
      @include desktop() {
        @include grid();

        &__image,
        &__body {
          @include grid-item-span(4, 6, 6);
          align-self: center;
          padding-left: 0;
        }
        &__description {
          @include paragraph-md();
        }
      }
    }
  }

  &--search {
    @include grid();
    padding: $wa-spacing-06 0;
    border-bottom: 2px solid $wa-cream;

    &:hover {
      cursor: pointer;

      h2 a {
        text-decoration: underline;
        text-decoration-color: $wa-navy;
      }
    }

    &:focus-within h2 a {
      color: $wa-navy;
      background-color: $wa-pink;
      border-bottom: solid $wa-navy calculate-rem(3);
      outline: none;
    }

    .card__body {
      @include grid-item-span(4, 4, 9);
      padding: 0;
      grid-gap: 0;
    }

    .card__tag {
      width: fit-content;
      margin-bottom: $wa-spacing-04;
    }

    .card__heading {
      margin-bottom: $wa-spacing-04;
    }

    .card__image {
      display: none;

      @include tablet() {
        @include grid-item-span(4, 2, 3);
        display: block;
        padding-left: 0;
      }
    }
  }

  // Colour variants.
  &--cream {
    background-color: $wa-cream;
    color: $wa-navy;
  }

  &--white {
    background-color: $wa-white;
    color: $wa-navy;
  }

  &--navy {
    background-color: $wa-navy;
    color: $wa-white;

    h3,
    .pseudo-h3,
    a,
    .card__body {
      color: $wa-white;
    }

    .card__image {
      filter: brightness(0) invert(1);
    }
  }

  &--blue {
    background-color: $wa-blue;

    h3,
    .pseudo-h3,
    a,
    .card__body {
      color: $wa-white;
    }

    .card__image {
      filter: brightness(0) invert(1);
    }
  }

  &__wrapper {
    height: 100%;
    width: fit-content;
    position: relative;
    z-index: 5;
    transition: transform 200ms;

    &:hover {
      cursor: pointer;
      transform: translateX($wa-spacing-02) translateY(-$wa-spacing-02);
    }
  }

  .card__hover {
    z-index: 0;
    background-size: 100% 100%;
    background-repeat: no-repeat;
    height: 100%;
    width: 100%;
    position: absolute;
    display: block;
    top: 0;
    background-image: url("/themes/custom/wateraid/images/icons/wa-container-lg-tall.svg");
  }
}

.paragraph--type--stats-item {
  height: 100%;
}

